[gd_scene load_steps=9 format=2]

[ext_resource path="res://stuff/parasite.gd" type="Script" id=1]
[ext_resource path="res://resources/particles/smoke4.png" type="Texture" id=2]

[sub_resource type="Animation" id=7]
resource_name = "Adult"
length = 6.0
tracks/0/type = "method"
tracks/0/path = NodePath("SpreadTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Old"
length = 10.0

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Spawn"
length = 16.0

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.709091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.866856, 0.988669, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.069307, 0, 0, 0, 0 )

[node name="Parasite" type="Node2D"]
script = ExtResource( 1 )

[node name="LifeCycle" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Adult = SubResource( 7 )
anims/Old = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/Spawn = SubResource( 10 )

[node name="SpreadTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="FlySpawnPoint" type="Position2D" parent="."]
position = Vector2( 0, -15 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 14
lifetime = 4.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 5.0
spread = 0.0
gravity = Vector2( 0, -40 )
damping = 34.62
angle = 720.0
angle_random = 1.0
scale_amount = 0.04
scale_amount_curve = SubResource( 11 )
color = Color( 0.298039, 0.611765, 0.25098, 1 )
color_ramp = SubResource( 12 )
hue_variation = 0.24
hue_variation_random = 0.33
__meta__ = {
"_editor_description_": "255"
}

[connection signal="animation_finished" from="LifeCycle" to="." method="_on_LifeCycle_animation_finished"]
[connection signal="timeout" from="SpreadTimer" to="." method="_on_SpreadTimer_timeout"]
